# src/routes/note.js
@@ -6,13 +6,29 @@ const passport = require("passport");
 const noteController = require("../controllers/noteController");
 
 router.post(
-    "/create-new-note",
-    passport.authenticate("jwt", { session: false }),
-    noteController.createNewNote
+  "/create-new-note",
+  passport.authenticate("jwt", { session: false }),
+  noteController.createNewNote
 );
-router.get("/get-all-notes", noteController.getAllNotes);
-router.get("/get-note-by-id", noteController.getNotesById);
-router.put("/update-note", noteController.updateNotes);
-router.delete("/delete-note", noteController.deleteNotes);
+router.get(
+  "/get-all-notes",
+  passport.authenticate("jwt", { session: false }),
+  noteController.getAllNotes
+);
+router.get(
+  "/get-note-by-id",
+  passport.authenticate("jwt", { session: false }),
+  noteController.getNotesById
+);
+router.put(
+  "/update-note",
+  passport.authenticate("jwt", { session: false }),
+  noteController.updateNotes
+);
+router.delete(
+  "/delete-note",
+  passport.authenticate("jwt", { session: false }),
+  noteController.deleteNotes
+);
 
 module.exports = router;
